html and scss done

--- a/index.html
+++ b/index.html
@@ -5,14 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>One-btn-game | lhd</title>
+    <title>Click color | lhd</title>
 
     <!-- style and font -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.min.css">
+
 </head>
 
 <body>
-    <h1>hello world</h1>
+    <div class="container">
+        <div id="btn">
+            <div class="main">Click me </div>
+            <div class="description">If color matches</div>
+        </div>
+    </div>
 
     <!-- scripts -->
     <script src="./scripts/main.js"></script>
