--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Click color | lhd</title>
+    <title>Color match | lhd</title>
 
     <!-- style and font -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -15,13 +15,14 @@
 </head>
 
 <body>
+    <div id="score">Score : 0</div>
     <div class="container">
         <div id="btn">
             <div class="main">Click me </div>
             <div class="description">If color matches</div>
         </div>
     </div>
-
+    <footer>Click the circle or hit space !!</footer>
     <!-- scripts -->
     <script src="./scripts/main.js"></script>
 </body>
